# FreeRDP

client/Harmony/: .gitignore  README.md  build-profile.json5
client/Harmony/AppScope/: app.json5
client/Harmony/entry/src/main/: module.json5
client/Harmony/entry/src/main/ets/components/: AuthDialog.ets  BookmarkList.ets  CertDialog.ets  ConnectionForm.ets  RemoteDesktopSurface.ets  SessionToolbar.ets  SessionWindow.ets
client/Harmony/entry/src/main/ets/entryability/: EntryAbility.ets
client/Harmony/entry/src/main/ets/pages/: Index.ets  Session.ets
client/Harmony/entry/src/main/resources/base/element/: string.json
client/Harmony/native/: CMakeLists.txt  freerdp_session.cpp  napi_export.cpp
